增加IP自动分流，国内IP不走代理

--- a/files/shadowsocksr.config
+++ b/files/shadowsocksr.config
@@ -21,4 +21,4 @@ config udp_forward
 
 config access_control
 	option lan_ac_mode '0'
-	option wan_bp_list '/dev/null'
+	option wan_bp_list '/etc/china_ssr.txt'
