刷新混淆协议

--- a/files/shadowsocksr.config
+++ b/files/shadowsocksr.config
@@ -12,7 +12,7 @@ config servers
 	option encrypt_method 'rc4-md5'
 	option protocol 'origin'
 	option obfs 'plain'
-	option obfs_param 'www.baidu.com'
+	option obfs_param ''
 
 config udp_forward
 	option tunnel_enable '0'
