--- a/files/shadowsocksr.config
+++ b/files/shadowsocksr.config
@@ -7,7 +7,7 @@ config servers
 	option server '127.0.0.1'
 	option server_port '8388'
 	option local_port '1080'
-	option password 'barfoo!'
+	option password 'hello!!'
 	option timeout '60'
 	option encrypt_method 'rc4-md5'
 	option protocol 'origin'
@@ -22,3 +22,16 @@ config udp_forward
 config access_control
 	option lan_ac_mode '0'
 	option wan_bp_list '/etc/china_ssr.txt'
+
+config server_global
+	option enable_server '0'	
+
+config server_config
+	option server '0.0.0.0'
+	option server_port '8388'
+	option password 'hello!!'
+	option timeout '60'
+	option encrypt_method 'rc4-md5'
+	option protocol 'origin'
+	option obfs 'plain'
+	option obfs_param ''	
